[package]
name = "mongone"
version = "0.1.0"
edition = "2024"

[dependencies]
clickhouse = "0.13.2"
mongodb = "3.2.2"
tokio = { version = "1.44.1", features = ["full"] }
urlencoding = "2.1.3"
serde_json = "1.0.140"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"

[dev-dependencies]
tempfile = "3.18.0"
